# RestauranteCC

RESTAURANTE_STR/: CMakeLists.txt
RESTAURANTE_STR/main/: CMakeLists.txt  button_handler.c  button_handler.h  http_server.c  main.c  rgb_led2.c  rgb_led2.h  temperature_sensor.c  temperature_sensor.h  uart_temperature.c  uart_temperature.h  wifi_app.c
RESTAURANTE_STR/main/webpage/: app.css  app.js  index.html
Restaurante/: App.js  package.json
Restaurante/Pantallas/: Admin.js  Cocina.js  Cocinasincontacto.js  FacturaCrear.js  Login.js  OrdenActualizar.js  OrdenCrear.js  OrdenCurso.js  Ordenes.js  Registradora.js  RegistradoraVer.js
Restaurante/funcional/: Logout.js  Menu.js  Navigation.js  STR.js
backend/app/Http/Controllers/: BillController.php  CashRegisterController.php  ChefController.php  OrderController.php  ProductController.php  TableController.php  WaiterController.php
backend/app/Models/: Bill.php  CashRegister.php  Chef.php  Order.php  Product.php  Table.php  Waiter.php
backend/database/migrations/: 2023_11_05_200615_create_tables_table.php  2023_11_05_200625_create_products_table.php  2023_11_05_200626_create_chefs_table.php  2023_11_05_200627_create_orders_table.php  2023_11_05_200627_create_waiters_table.php  2023_11_05_201553_create_bills_table.php  2023_11_05_201610_create_cash_registers_table.php
backend/routes/: api.php
